--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <script> "src/app.js" </script>
 <body>
-
-</body>
-
+  <audio id="music" controls="controls">
+    <source src="example.mp3" type="audio/mpeg" />
+  </audio>
 </body>
 </head>
 </html>
