play and pause buttn added

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
   <script> "src/app.js" </script>
+  <link href="stylesheet.css" rel="stylesheet" type="text/css" />
 <body>
   <audio id="music" controls="controls">
     <source src="example.mp3" type="audio/mpeg" />
   </audio>
+  <div id="video_controls">
+    <div id="play button" class="player-button">Play</div>
+    <div id="pause_button" class="player-button">Pause</div>
 </body>
 </head>
 </html>
