pause button and play button added and working

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <script> "src/app.js" </script>
   <link href="stylesheet.css" rel="stylesheet" type="text/css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="src/app.js"></script>
+</head>
 <body>
-  <audio id="music" controls="controls">
+  <audio id="audio" controls="controls">
     <source src="example.mp3" type="audio/mpeg" />
   </audio>
-  <div id="video_controls">
-    <div id="play button" class="player-button">Play</div>
+  <div id="audio_controls">
+    <div id="play_button" class="player-button">Play</div>
     <div id="pause_button" class="player-button">Pause</div>
 </body>
-</head>
 </html>
