play and pause buttons changed into one button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <source src="example.mp3" type="audio/mpeg" />
   </audio>
   <div id="audio_controls">
-    <div id="play_button" class="player-button">Play</div>
-    <div id="pause_button" class="player-button">Pause</div>
+    <div id="play_toggle" class="player-button">Play</div>
 </body>
 </html>
