next button added, not working yet

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <script src="src/app.js"></script>
 </head>
 <body>
-  <audio id="audio" controls="controls">
-    <source src="example.mp3" type="audio/mpeg" />
   </audio>
   <div id="audio_controls">
-    <div id="play_toggle" class="player-button">Play</div>
+  <div id="play_toggle" class="player-button">Play</div>
+  <div id="next" class="player-button">Next</div>
+  <ul id="playlist">
+    <audio id="audio" controls="controls">
+    <source src="example2.mp3" type="audio/mpeg" />
+    <source src="example.mp3" type="audio/mpeg" />
+  </ul>
 </body>
 </html>
