--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+  <script> SC.initialize({
+    client_id: '8e74002fd2542f89231c5133c2a54833',
+  }); </script>
   <script src="src/app.js"></script>
 </head>
+
 <body>
   </audio>
   <div id="audio_controls">
   <div id="play_toggle" class="player-button">Play</div>
   <div id="next" class="player-button">Next</div>
   <ul id="playlist">
+    <li class ="active">
     <audio id="audio" controls="controls">
     <source src="example2.mp3" type="audio/mpeg" />
     <source src="example.mp3" type="audio/mpeg" />
+  </li>
   </ul>
 </body>
 </html>
