--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   </audio>
   <div id="audio_controls">
   <div id="play_toggle" class="player-button">Play</div>
-  <div id="next" class="player-button">Next</div>
-  <ul id="playlist">
-    <li class ="active">
+  <!-- <div id="next" class="player-button">Next</div> -->
+  <div id="playlist">
     <audio id="audio" controls="controls">
-    <source src="example2.mp3" type="audio/mpeg" />
-    <source src="example.mp3" type="audio/mpeg" />
-  </li>
+      <source src="https://api.soundcloud.com/tracks/52540500/stream?client_id=8e74002fd2542f89231c5133c2a54833" type="audio/mpeg" />
+      <!-- <source src="example2.mp3" type="audio/mpeg" /> -->
+  </div>
   </ul>
 </body>
 </html>
