playlist displayed on browser

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   }); </script>
   <script src="src/app.js"></script>
 </head>
-
 <body>
-  </audio>
+
   <div id="audio_controls">
   <div id="play_toggle" class="player-button">Play</div>
   <!-- <div id="next" class="player-button">Next</div> -->
@@ -19,7 +18,9 @@
     <audio id="audio" controls="controls">
       <source src="https://api.soundcloud.com/tracks/52540500/stream?client_id=8e74002fd2542f89231c5133c2a54833" type="audio/mpeg" />
       <!-- <source src="example2.mp3" type="audio/mpeg" /> -->
+    </audio>
+    <div id="title">
+    </div>
   </div>
-  </ul>
 </body>
 </html>
