synced the trackurl to the track class, and finally worked out how to make the audio player also change

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
   <div id="play_toggle" class="player-button">Play</div>
   <!-- <div id="next" class="player-button">Next</div> -->
   <div id="playlist">
-    <audio id="audio" controls="controls">
-      <source src="https://api.soundcloud.com/tracks/52540500/stream?client_id=8e74002fd2542f89231c5133c2a54833" type="audio/mpeg" />
-      <!-- <source src="example2.mp3" type="audio/mpeg" /> -->
-    </audio>
+    <audio id="audio" controls="controls" autoplay>
+      <source id="player" src="" type="audio/mpeg"  autoplay/>
+      </audio>
     <div id="title">
     </div>
   </div>
