--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+<title> randomplaylist.herokuapp.com</title>
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
