button css added

--- a/playlist.html
+++ b/playlist.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<title> randomplaylist.herokuapp.com</title>
+<title> randomplaylist </title>
 <head>
   <link href="stylesheet.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -17,7 +17,10 @@
       <source id="player" src="" type="audio/mpeg"  autoplay/>
       </audio>
     <div id="title">
-    </div>
+
+  <button id="button" type="submit">
+Random </div>
+  </div>
   </div>
 </body>
 </html>
