--- a/playlist.html
+++ b/playlist.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-<title> randomplaylist </title>
 <head>
+  <title> Playlist </title>
   <link href="stylesheet.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
@@ -17,9 +17,6 @@
       <source id="player" src="" type="audio/mpeg"  autoplay/>
       </audio>
     <div id="title">
-
-  <button id="button" type="submit">
-Random </div>
   </div>
   </div>
 </body>
