css track playing

--- a/playlist.html
+++ b/playlist.html
@@ -14,10 +14,9 @@
 
   <div id="audio_controls">
     <audio id="audio" controls="controls" autoplay>
-      <source id="player" src="" type="audio/mpeg"  autoplay/>
-      </audio>
-    <div id="title">
-  </div>
+      <source id="player" src="" type="audio/mpeg" autoplay />
+    </audio>
+    <div id="title"></div>
   </div>
 </body>
 </html>
